[0.4.9][REGEDIT] Fix condition of enabling load/unload hive menu item (#6251), + RC-stuff

Port back:

0.4.15-dev-7362-g 1aeac0bf24e716460d10702c846859600a9754e6 [REGEDIT] Fix condition of enabling load/unload hive menu item (#6251) CORE-19298
which was an addendum to 0.4.15-dev-243-g 4d1cd723175c25a76c17f58cb93f4e83dfd8881c (where I ported back parts earlier from)

and ports back various unrelated RC-tweaks, e.g.
partially 0.4.15-dev-7887-g 64a59a17b5e2828adb1a81e24647e5ec1266e78e [REGEDIT] RC-tweak, only the it-IT-addendum
0.4.15-dev-6940-g 03dc2ef724806614983664509214dcb87c68a6c2 [REGEDIT] Update Romanian (ro-RO) translation (#5961)
and a few others

regedit.exe binary does shrink a tiny bit on all branches:

regedit.exe master          RosBEWin2.2.2 GCC8.4.0 dbg x86            1.049.600 (0.4.15-dev-7886-g938a39a)
regedit.exe releases/0.4.14 RosBEWin2.2.2 GCC8.4.0 dbg x86  755.712 ->  755.200
regedit.exe releases/0.4.14 RosBEWin2.1.6 GCC4.7.2 dbg x86  750.080 ->  749.056
regedit.exe releases/0.4.13 RosBEWin2.1.6 GCC4.7.2 dbg x86  742.400 ->  741.888
regedit.exe releases/0.4.12 RosBEWin2.1.6 GCC4.7.2 dbg x86  744.448 ->  743.424
regedit.exe releases/0.4.11 RosBEWin2.1.6 GCC4.7.2 dbg x86  744.448 ->  743.424
regedit.exe releases/0.4.10 RosBEWin2.1.6 GCC4.7.2 dbg x86  744.448 ->  743.424
regedit.exe releases/0.4. 9 RosBEWin2.1.6 GCC4.7.2 dbg x86  744.448 ->  743.424
regedit.exe releases/0.4. 8 RosBEWin2.1.6 GCC4.7.2 dbg x86  743.936 ->  742.912
regedit.exe releases/0.4. 7 RosBEWin2.1.6 GCC4.7.2 dbg x86  743.936 ->  742.912